Add contact form and UI components
Introduces a new contact form with validation, status feedback, and integration with Formspree. Adds reusable Input and TextArea components, updates translations for contact form fields, and enhances page animations for Home, Projects, and Contact sections. Minor UI and style adjustments are also included.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,7 +67,35 @@
     }
   },
   "contact": {
-    "title": "Contact"
+    "title": "Contact",
+    "subtitle": "Get in touch with me",
+    "form": {
+      "name": "Full Name",
+      "email": "Email Address",
+      "subject": "Subject",
+      "service": "Service of Interest",
+      "message": "Message",
+      "send": "Send Message",
+      "placeholder_name": "Your full name",
+      "placeholder_email": "your@email.com",
+      "placeholder_message": "Type your message here...",
+      "select_service": "Select a service",
+      "services": {
+        "web_design": "Web Design",
+        "development": "Frontend Development",
+        "maintenance": "Web Maintenance",
+        "consulting": "Technical Consulting",
+        "other": "Other"
+      },
+      "success": "Message sent successfully!",
+      "error": "There was an error sending the message."
+    },
+    "info": {
+      "location_title": "My Location",
+      "social_title": "Social Media",
+      "email_title": "Direct Email",
+      "address": "Anaco, Anzoátegui, Venezuela"
+    }
   },
   "not_found": {
     "title": "404 Not Found"
