Add Rifas Marilu project and particles background
Added the Rifas Marilu project to the featured projects list, including translations and image. Introduced a new ParticlesBackground component for animated background effects and integrated it into the App layout. Removed unused CardProjects components and updated ProjectCard to conditionally render the source code link.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,6 +24,10 @@
     "source_code": "Source Code",
     "others_title": "Other Projects",
     "items": {
+      "rifas_marilu": {
+        "title": "Rifas Marilu",
+        "description": "Development of a web application for raffles."
+      },
       "rick_and_morty": {
         "title": "Rick and Morty APP",
         "description": "Development of a Rick and Morty web application using JavaScript, Tailwind CSS and API Consumption.",
